Fixed format and paths

--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Untitled</title>
-    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/login.css">
+    <script src="../static/controllers/jquery.min.js"></script>
+    <script src="../static/controllers/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -19,8 +21,6 @@
                 <p style="margin-top: 10px;">contact info:</p><input class="form-control" type="text" id="reg_contact">
                 <p style="margin-top: 10px;">profile picture:</p><input type="file" id="reg_picture"></div><button class="btn btn-primary" id="register_button" type="button" style="margin-left: 144px;padding-right: 33px;padding-left: 31px;margin-top: 31px;">Register !</button></form>
     </div>
-    <script src="../static/controllers/jquery.min.js"></script>
-    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
