--- a/templates/register_succ.html
+++ b/templates/register_succ.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Untitled</title>
-    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/login.css">
+    <script src="../static/controllers/jquery.min.js"></script>
+    <script src="../static/controllers/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -13,8 +15,7 @@
         <div class="col" style="width: 659px;margin-left: 307px;margin-top: 20px;padding: 0;padding-top: 56px;">
             <h1 style="margin-top: 38px;margin-left: 0;">Register Successfully!</h1><button class="btn btn-primary" id="back2Login" type="button" style="margin-left: 113px;margin-top: 37px;">Back to Login Page</button></div>
     </div>
-    <script src="../static/controllers/jquery.min.js"></script>
-    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
+    
 </body>
 
 </html>
