--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Untitled</title>
-    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/login.css">
+    <script src="../static/controllers/jquery.min.js"></script>
+    <script src="../static/controllers/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -19,8 +21,6 @@
                     <p style="width: 93px;margin-top: 15px;">password:</p><input class="form-control" type="password" id="usr_pwd"></div>
             </form><button class="btn btn-primary" id="login_button" type="button" style="margin-left: 67px;padding-left: 21px;padding-right: 26px;">Log in</button><button class="btn btn-primary" id="newuser_button" type="button" style="margin-left: 89px;">new user</button></div>
     </div>
-    <script src="../static/controllers/jquery.min.js"></script>
-    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
