--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='login'>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Untitled</title>
     <link rel="stylesheet" href="../static/css/login.css">
+    <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="../static/controllers/jquery.min.js"></script>
     <script src="../static/controllers/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='controllers/login.controller.js') }}"></script>
 </head>
 
-<body>
+<body ng-controller="loginController">
     <div class="container" style="height: 454px;">
         <div class="col" style="width: 446px;height: 443px;margin-top: 50px;margin-bottom: 0px;margin-right: 0px;margin-left: 245px;">
             <h1 style="padding-left: 0;padding-top: 39px;padding-bottom: 7px;">Badger Hive Management System</h1>
@@ -19,7 +21,7 @@
                 <div class="form-group" style="height: 198px;">
                     <p style="width: 93px;">username:</p><input class="form-control" type="text" id="usr_name">
                     <p style="width: 93px;margin-top: 15px;">password:</p><input class="form-control" type="password" id="usr_pwd"></div>
-            </form><button class="btn btn-primary" id="login_button" type="button" style="margin-left: 67px;padding-left: 21px;padding-right: 26px;">Log in</button><button class="btn btn-primary" id="newuser_button" type="button" style="margin-left: 89px;">new user</button></div>
+            </form><button ng-click="validateLogin()" class="btn btn-primary" id="login_button" type="button" style="margin-left: 67px;padding-left: 21px;padding-right: 26px;">Log in</button><button ng-click="register()" class="btn btn-primary" id="newuser_button" type="button" style="margin-left: 89px;">new user</button></div>
     </div>
 </body>
 
