--- a/templates/register.html
+++ b/templates/register.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='register'>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Untitled</title>
     <link rel="stylesheet" href="../static/css/login.css">
+    <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="../static/controllers/jquery.min.js"></script>
     <script src="../static/controllers/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='controllers/register.controller.js') }}"></script>
 </head>
 
-<body>
+<body ng-controller="registerController">
     <div class="container">
         <form style="margin-left: 244px;">
             <h1 style="margin-top: 81px;margin-left: 47px;margin-bottom: 35px;">New User Register</h1>
@@ -19,7 +21,11 @@
                 <p style="margin-top: 10px;">password:</p><input class="form-control" type="text" id="reg_pwd">
                 <p style="margin-top: 10px;">apiary address:</p><input class="form-control" type="text" id="reg_addr">
                 <p style="margin-top: 10px;">contact info:</p><input class="form-control" type="text" id="reg_contact">
-                <p style="margin-top: 10px;">profile picture:</p><input type="file" id="reg_picture"></div><button class="btn btn-primary" id="register_button" type="button" style="margin-left: 144px;padding-right: 33px;padding-left: 31px;margin-top: 31px;">Register !</button></form>
+                <p style="margin-top: 10px;">profile picture:</p><input type="file" id="reg_picture">
+                <p style="width: 400px;margin-top: 15px; color:red" id="reg_error">&nbsp;</p></div>
+            <button ng-click="validateRegister()" class="btn btn-primary" id="register_button" type="button" style="margin-left: 44px;padding-right: 33px;padding-left: 31px;margin-top: 31px;">Register !</button>
+            <button ng-click="back2login()" class="btn btn-primary" id="back_button" type="button" style="margin-left: 64px;padding-right: 25px;padding-left: 25px;margin-top: 31px;">Back to login</button>
+        </form>
     </div>
 </body>
 
