--- a/templates/register_succ.html
+++ b/templates/register_succ.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='registerSuccess'>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
+    <title>Hive Management - Register Success</title>
     <link rel="stylesheet" href="../static/css/login.css">
+    <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="../static/controllers/jquery.min.js"></script>
     <script src="../static/controllers/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='controllers/register-success.controller.js') }}"></script>
 </head>
 
-<body>
+<body ng-controller='registerSuccessController'>
     <div class="container">
         <div class="col" style="width: 659px;margin-left: 307px;margin-top: 20px;padding: 0;padding-top: 56px;">
-            <h1 style="margin-top: 38px;margin-left: 0;">Register Successfully!</h1><button class="btn btn-primary" id="back2Login" type="button" style="margin-left: 113px;margin-top: 37px;">Back to Login Page</button></div>
+            <h1 style="margin-top: 38px;margin-left: 0;">Register Successfully!</h1><button class="btn btn-primary" ng-click="login()" id="back2Login" type="button" style="margin-left: 113px;margin-top: 37px;">Back to Login Page</button></div>
     </div>
     
 </body>
