using back2login instead of login, to be in constant with scope function define

--- a/templates/register.html
+++ b/templates/register.html
@@ -24,7 +24,7 @@
                 <p style="margin-top: 10px;">profile picture:</p><input type="file" id="reg_picture">
                 <p style="width: 400px;margin-top: 15px; color:red" id="reg_error">&nbsp;</p></div>
             <button ng-click="validateRegister()" class="btn btn-primary" id="register_button" type="button" style="margin-left: 44px;padding-right: 33px;padding-left: 31px;margin-top: 31px;">Register !</button>
-            <button ng-click="login()" class="btn btn-primary" id="back_button" type="button" style="margin-left: 64px;padding-right: 25px;padding-left: 25px;margin-top: 31px;">Back to login</button>
+            <button ng-click="back2login()" class="btn btn-primary" id="back_button" type="button" style="margin-left: 64px;padding-right: 25px;padding-left: 25px;margin-top: 31px;">Back to login</button>
         </form>
     </div>
 </body>
