playing with table styles and made a "hive" class

--- a/templates/hives.html
+++ b/templates/hives.html
@@ -22,6 +22,16 @@
             display: inline-block;
             padding: 8px;
          }
+        .hive{
+            background-color: azure;
+            color: black;
+            margin: 50px;
+            padding: 50px;
+        }
+        table, th, td {
+            padding: 15px;
+            border-spacing: 10px;
+        }
     </style>
 </head>
 <body style="background-color:#EFE4B0;">
@@ -31,6 +41,28 @@
         <li><a href="">Add Apiary</a></li>
         <!--This is where "Welcome <username>" would go-->
         <li>Welcome <a href="">User</a></li>
-    </ul>
+    </ul><br>
+    <br>
+    <table >
+        <tr>
+            <td class="hive">
+                <h2>Hive 1</h2>
+                <p>Add edit and delete buttons here</p>
+            </td>
+            <td class="hive">
+                <h2>Hive 2</h2>
+                <p>Add edit and delete buttons here</p>
+            </td>
+            <td class="hive">
+                <h2>Hive 3</h2>
+                <p>Add edit and delete buttons here</p>
+            </td>
+        </tr>
+
+    </table>
+    <div class="hive">
+        <h2>Hive 1</h2>
+        <p>Add edit and delete buttons here</p>
+    </div>
 </body>
 </html>
