--- a/templates/editHive.html
+++ b/templates/editHive.html
@@ -2,35 +2,43 @@
 <html lang="en">
 <head>
     <title>HTML Elements Reference</title>
-    <h1 style="text-align: center">Hive 1 Information</h1> <!--Find a way to make this automated-->
+    <h1 style="text-align: center; background-color:darkorange; border-radius: 10px;">Hive 1 Information</h1> <!--Find a way to make this automated-->
 </head>
 <body style="background-color:#EFE4B0;">
 
 
 
-    <form action="/hive.pdf">
-        <label for="editHealth">Health:</label>
-        <input type="text" id="editHealth" name="editHealth"><br><br>
-        <label for="rofInspection">Results of Inspection:</label>
-        <input type="text" id="rofInspection" name="rofInspection"><br><br>
-        <label for="hstores">Honey Stores:</label>
-        <input type="text" id="hstores" name="hstores"><br><br>
-        <label for="qproduction">Queen Production:</label>
-        <input type="text" id="qproduction" name="qproduction"><br><br>
-        <label for="equipment">Equipment on the Hive:</label>
-        <input type="text" id="equipment" name="equipment"><br><br>
-        <label for="iequipment">Equipment in inventory:</label>
-        <input type="text" id="iequipment" name="iequipment"><br><br>
-        <label for="losses">Losses:</label>
-        <input type="text" id="losses" name="losses"><br><br>
-        <label for="gains">Gains:</label>
-        <input type="text" id="gains" name="gains"><br><br>
+    <form action="/hive.csv">
+        <label for="editHealth">Health:</label><br>
+        <input type="text" id="editHealth" name="editHealth"><br>
+
+        <label for="rofInspection">Results of Inspection:</label><br>
+        <input type="file" id="rofInspection" name="rofInspection"><br>
+        
+        <label for="hstores">Honey Stores:</label><br>
+        <input type="text" id="hstores" name="hstores"><br>
+        
+        <label for="qproduction">Queen Production:</label><br>
+        <input type="text" id="qproduction" name="qproduction"><br>
+        
+        <label for="equipment">Equipment on the Hive:</label><br>
+        <input type="text" id="equipment" name="equipment"><br>
+        
+        <label for="iequipment">Equipment in Inventory:</label><br>
+        <input type="text" id="iequipment" name="iequipment"><br>
+        
+        <label for="losses">Losses:</label><br>
+        <input type="text" id="losses" name="losses"><br>
+        
+        <label for="gains">Gains:</label><br>
+        <input type="text" id="gains" name="gains"><br>
+        
         <input type="submit" value="Submit">
     </form>
 
     <p>
         Click the "Submit" button and the form-data will be sent to a page on the
-        server called "hive.pdf".
+        server called "hive.csv".
     </p>
 
 </body>
