--- a/templates/editHive.html
+++ b/templates/editHive.html
@@ -1,8 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>HTML Elements Reference</title>
+    <title>Edit Hives</title>
     <h1 style="text-align: center; background-color:darkorange; border-radius: 10px;">Hive 1 Information</h1> <!--Find a way to make this automated-->
+    <style>
+        {
+            box-sizing: border-box;
+        }
+
+        /* Button used to open the contact form - fixed at the bottom of the page */
+        .open-button {
+            background-color: #555;
+            color: white;
+            padding: 16px 20px;
+            border: none;
+            cursor: pointer;
+            opacity: 0.8;
+            position: fixed;
+            bottom: 23px;
+            right: 28px;
+            width: 280px;
+        }
+
+        /* The popup form - hidden by default */
+        .form-popup {
+            display: none;
+            position: fixed;
+            bottom: 0;
+            right: 15px;
+            border: 3px solid #f1f1f1;
+            z-index: 9;
+        }
+
+        /* Add styles to the form container */
+        .form-container {
+            max-width: 300px;
+            padding: 10px;
+            background-color: white;
+        }
+
+            /* Full-width input fields */
+            .form-container input[type=text], .form-container input[type=password] {
+                width: 100%;
+                padding: 15px;
+                margin: 5px 0 22px 0;
+                border: none;
+                background: #f1f1f1;
+            }
+
+                /* When the inputs get focus, do something */
+                .form-container input[type=text]:focus, .form-container input[type=password]:focus {
+                    background-color: #ddd;
+                    outline: none;
+                }
+
+            /* Set a style for the submit/login button */
+            .form-container .btn {
+                background-color: #4CAF50;
+                color: white;
+                padding: 16px 20px;
+                border: none;
+                cursor: pointer;
+                width: 100%;
+                margin-bottom: 10px;
+                opacity: 0.8;
+            }
+
+            /* Add a red background color to the cancel button */
+            .form-container .cancel {
+                background-color: red;
+            }
+
+            /* Add some hover effects to buttons */
+            .form-container .btn:hover, .open-button:hover {
+                opacity: 1;
+            }
+    </style>
 </head>
 <body style="background-color:#EFE4B0;">
 
@@ -14,25 +87,25 @@
 
         <label for="rofInspection">Results of Inspection:</label><br>
         <input type="file" id="rofInspection" name="rofInspection"><br>
-        
+
         <label for="hstores">Honey Stores:</label><br>
         <input type="text" id="hstores" name="hstores"><br>
-        
+
         <label for="qproduction">Queen Production:</label><br>
         <input type="text" id="qproduction" name="qproduction"><br>
-        
+
         <label for="equipment">Equipment on the Hive:</label><br>
         <input type="text" id="equipment" name="equipment"><br>
-        
+
         <label for="iequipment">Equipment in Inventory:</label><br>
         <input type="text" id="iequipment" name="iequipment"><br>
-        
+
         <label for="losses">Losses:</label><br>
         <input type="text" id="losses" name="losses"><br>
-        
+
         <label for="gains">Gains:</label><br>
         <input type="text" id="gains" name="gains"><br>
-        
+
         <input type="submit" value="Submit">
     </form>
 
@@ -41,5 +114,30 @@
         server called "hive.csv".
     </p>
 
+    <div class="form-popup" id="myForm">
+        <form action="/action_page.php" class="form-container">
+            <h1>Login</h1>
+
+            <label for="email"><b>Email</b></label>
+            <input type="text" placeholder="Enter Email" name="email" required>
+
+            <label for="psw"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="psw" required>
+
+            <button type="submit" class="btn">Login</button>
+            <button type="submit" class="btn cancel" onclick="closeForm()">Close</button>
+        </form>
+    </div>
+
+
+    <script>
+        function openForm() {
+        document.getElementById("myForm").style.display = "block";
+        }
+
+        function closeForm() {
+        document.getElementById("myForm").style.display = "none";
+        }
+    </script>
 </body>
 </html>
