--- a/templates/editHive.html
+++ b/templates/editHive.html
@@ -1,3 +1,7 @@
+<!--Author: Pradyumna Rao
+    Date Created: 09/30/2020
+    Description: This is the editHives.html page that is opened when hitting the button edit on the All Hives Page. Tried in this is the form for inputting variables as well as a trial popup form.-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
