--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,22 +12,22 @@
     <table border="0" style="border-collapse: collapse; width: 80%;">
     <tbody>
         <tr style="height: 35px;">
-            <td style="width: 50%; height: 35px;" colspan="3" id="yellow"><h1>Title of Profile would go here</h1></td>
+            <td style="width: 50%; height: 35px;" colspan="3" id="titleText"><h1>Title of Profile would go here</h1></td>
         </tr>
-        <tr style="height: 182px;">
-            <td style="width: 30%; height: 182px;"></td>
-            <td style="width: 5%; height: 182px;" rowspan="4" id="yellow"></td>
-            <td style="width: 50%; height: 182px;" rowspan="3"><textarea rows="15" cols="80" align="center" placeholder="Hive Information"></textarea></td>
+        <tr style="height: 200px;">
+            <td style="width: 30%; height: 200px;"><img id="hiveimage" src="" alt=""></td>
+            <td style="width: 5%; height: 200px;" rowspan="4" id="yellow"></td>
+            <td style="width: 50%; height: 200px;" rowspan="3" id="hiveinfobox"><label><input type="checkbox" id="hiveinfo" name="hiveinfo" value="hiveinfo">Hive info goes here</label></td>
         </tr>
         <tr style="height: 31px;">
-            <td style="width: 30%; height: 31px;" id="yellow"><input type="submit" value="Upload" /></td>
+            <td style="width: 30%; height: 31px;"><input id="pictureupload" type="file" value="Upload" /></td>
         </tr>
         <tr style="height: 222px;">
             <td style="width: 30%; height: 222px;">Phone: <input name="yourphone" type="tel" /><br /></br>Email: <input name="yourmail" type="email" /></td>
         </tr>
         <tr style="height: 31px;">
-            <td style="width: 30%; height: 31px;" id="yellow"><input type="submit" value="Update" /></td>
-            <td style="width: 60%; height: 31px;" id="yellow"><input type="submit" value="Update" /></td>
+            <td style="width: 30%; height: 31px;"><input id="contactupdate" type="submit" value="Update" /></td>
+            <td style="width: 60%; height: 31px;"><input id="infoupdate" type="submit" value="Update" /></td>
         </tr>
     </tbody>
     </table>
