--- a/static/css/ProfileStyle.css
+++ b/static/css/ProfileStyle.css
@@ -5,7 +5,15 @@ table {
 	margin: 0 auto;
 	background-color: white;
 }
-#yellow
+#pictureupload, #contactupdate, #infoupdate, #yellow, #titleText
 {
 	background-color: #EFE4B0;
+}
+#hiveinfo
+{
+
+}
+#hiveimage
+{
+
 }
