--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,14 +20,14 @@
             <td style="width: 50%; height: 200px;" rowspan="3" id="hiveinfobox"><label><input type="checkbox" id="hiveinfo" name="hiveinfo" value="hiveinfo">Hive info goes here</label></td>
         </tr>
         <tr style="height: 31px;">
-            <td style="width: 30%; height: 31px;"><input id="pictureupload" type="file" value="Upload" /></td>
+            <td style="width: 30%; height: 31px;" id="yellow"><input id="pictureupload" type="file" value="Upload" /></td>
         </tr>
         <tr style="height: 222px;">
             <td style="width: 30%; height: 222px;">Phone: <input name="yourphone" type="tel" /><br /></br>Email: <input name="yourmail" type="email" /></td>
         </tr>
         <tr style="height: 31px;">
-            <td style="width: 30%; height: 31px;"><input id="contactupdate" type="submit" value="Update" /></td>
-            <td style="width: 60%; height: 31px;"><input id="infoupdate" type="submit" value="Update" /></td>
+            <td style="width: 30%; height: 31px;" id-"yellow"><input id="contactupdate" type="submit" value="Update" /></td>
+            <td style="width: 60%; height: 31px;" id="yellow"><input id="infoupdate" type="submit" value="Update" /></td>
         </tr>
     </tbody>
     </table>
