--- a/templates/hives.html
+++ b/templates/hives.html
@@ -78,14 +78,14 @@
         TODO: add icons; my icons don't play nice...-->
     <div class="hive-container" ng-repeat="hive in hives | orderBy : 'id'">
         <div class="hive">
-            <h2>{{ '{{hive.id}}' }}</h2>
+            <h2>Hive #{{ '{{hive.id}}' }}</h2>
             <input type="button" style="font-size:medium" ng-click="editHive(hive.id)" value="Edit" />&nbsp; &nbsp; &nbsp;
             <input type="button" style="font-size:medium" ng-click="deleteHive(hive.id)" value="Delete" />
         </div>
         <!--Add Hive function at the end-->
         <div class="addhive">
             <h2>Add Hive</h2>
-            <input type="button" style="font-size:x-large;" onclick="document.location=''" value="+" />
+            <input type="button" style="font-size:x-large;" ng-click="addHive()" value="+" />
         </div>
     </div>
 
