--- a/templates/editHive.html
+++ b/templates/editHive.html
@@ -3,10 +3,9 @@
     Description: This is the editHives.html page that is opened when hitting the button edit on the All Hives Page. Tried in this is the form for inputting variables as well as a trial popup form.-->
 
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app='editHive' lang="en">
 <head>
     <title>Edit Hives</title>
-    <h1 style="text-align: center; background-color:darkorange; border-radius: 10px;">Hive 1 Information</h1> <!--Find a way to make this automated-->
     <style>
         {
             box-sizing: border-box;
@@ -80,12 +79,13 @@
                 opacity: 1;
             }
     </style>
+
+    <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='controllers/editHive.controller.js') }}"></script>
 </head>
-<body style="background-color:#EFE4B0;">
-
-
-
-    <form action="/hive.csv">
+<body ng-controller="editHiveController" style="background-color:#EFE4B0;">
+    <h1 style="text-align: center; background-color:darkorange; border-radius: 10px;">Hive {{ '{{hiveId}}' }} Information</h1>
+    <form>
         <label for="editHealth">Health:</label><br>
         <input type="text" id="editHealth" name="editHealth"><br>
 
@@ -110,12 +110,12 @@
         <label for="gains">Gains:</label><br>
         <input type="text" id="gains" name="gains"><br>
 
-        <input type="submit" value="Submit">
+        <input ng-click="update()" type="button" value="Submit">
     </form>
 
     <p>
         Click the "Submit" button and the form-data will be sent to a page on the
-        server called "hive.csv".
+        server called "hive_{{ '{{hiveId}}' }}.csv".
     </p>
 
     <div class="form-popup" id="myForm">
