Fixed profile root from hives

--- a/templates/hives.html
+++ b/templates/hives.html
@@ -69,7 +69,7 @@
     <ul>
         <li><b>All Hives</b></li>
         <!--This is where "Welcome <username>" would go-->
-        <li><b>Welcome, &nbsp; <a href="profile.html">User</a></b></li>
+        <li><b>Welcome, &nbsp; <a href="profile">User</a></b></li>
     </ul>
     <br>
     <br>
