hives.html should now order the hives correctly with one "add hive"

--- a/templates/hives.html
+++ b/templates/hives.html
@@ -76,8 +76,8 @@
     <!--Beginning of Hive lists-->
     <!--TODO: make buttons do things
         TODO: add icons; my icons don't play nice...-->
-    <div class="hive-container" ng-repeat="hive in hives | orderBy : 'id'">
-        <div class="hive">
+    <div class="hive-container">
+        <div class="hive" ng-repeat="hive in hives | orderBy : 'id'">
             <h2>Hive #{{ '{{hive.id}}' }}</h2>
             <input type="button" style="font-size:medium" ng-click="editHive(hive.id)" value="Edit" />&nbsp; &nbsp; &nbsp;
             <input type="button" style="font-size:medium" ng-click="deleteHive(hive.id)" value="Delete" />
