--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,36 +1,25 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" ng-app="profile" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../static/css/ProfileStyle.css">
     <link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
     <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='controllers/profile.controller.js') }}"></script>
     <script>
-    function readURL(input) {
-        if (input.files && input.files[0]) {
-            var reader = new FileReader();
-
-            reader.onload = function (e) {
-                $('#imagio')
-                    .attr('src', e.target.result)
-                    .width(325)
-                    .height(300);
-            };
-
-            reader.readAsDataURL(input.files[0]);
-        }
-    }
     </script>        <!-- credit to https://stackoverflow.com/questions/12368910/html-display-image-after-selecting-filename !-->
     <title>Profile</title>
-<style>
-  article, aside, figure, footer, header, hgroup, 
-  menu, nav, section { display: block; }
-</style>
+    <style>
+        article, aside, figure, footer, header, hgroup,
+        menu, nav, section {
+            display: block;
+        }
+    </style>
 </head>
-<body style="background-color:#EFE4B0;">
+<body ng-controller='profileController' style="background-color:#EFE4B0;">
     </br>
     </br>
     <table border="0" style="border-collapse: collapse; width: 80%;">
